--- a/dh-caja-service.yml
+++ b/dh-caja-service.yml
@@ -1,7 +1,7 @@
 server:
   port: ${PORT:8885}
 
-message: configuration via config-server
+message: "configuration via config-server"
 
 bills: "5,10,20,50,100,500,1000"
 cash-ammount-max: 500000
